--- a/apartmentRental/src/main/webapp/app/src/index.html
+++ b/apartmentRental/src/main/webapp/app/src/index.html
@@ -3,11 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<script src="../bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script type="text/javascript" src="../bower_components/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="../bower_components/lodash/lodash.js"></script>
 <script type="text/javascript" src="../bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+<script src="../bower_components/ngAutocomplete/src/ngAutocomplete.js"></script>
 <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
 <link rel="stylesheet" href="css/styles.css">
 <script type="text/javascript" src="js/app.js"></script>
