--- a/apartmentRental/src/main/webapp/app/src/index.html
+++ b/apartmentRental/src/main/webapp/app/src/index.html
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-inverse navbar-static-top resetMarginPadding">
 	<div class="container">
 		<div class="navbar-header">
-			<a href="#" class="navbar-brand">Apartment Rental System</a>
+			<a ui-sref="home" class="navbar-brand">Apartment Rental System</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
