--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="RentalApp">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Property rental system</title>
 <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
 <link rel="stylesheet" href="../bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 <link rel="stylesheet" href="css/styles.css">
@@ -27,7 +27,7 @@
 <nav class="navbar navbar-inverse navbar-static-top resetMarginPadding">
 	<div class="container">
 		<div class="navbar-header">
-			<a ui-sref="home" class="navbar-brand">Apartment Rental System</a>
+			<a ui-sref="home" class="navbar-brand">Property Rental System</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
