--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -17,6 +17,8 @@
 <script type="text/javascript" src="../bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 <script src="../bower_components/ngAutocomplete/src/ngAutocomplete.js"></script>
+<script src="../bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
+<script src="../bower_components/ng-file-upload/angular-file-upload.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/services.js"></script>
 <script type="text/javascript" src="js/controllers.js"></script>
