--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -33,6 +33,8 @@
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
+					<li><a ui-sref="showMyProperties">Show my props</a></li>
+					<li><a ui-sref="updateProperty({propertyId:1})">Update prop 1</a></li>
 					<li><a ui-sref="showProperty({propertyId:1})">Show prop 1</a></li>
 					<li><a ui-sref="addProperty">Add property</a></li>
                     <li><a ui-sref="login">Login</a></li>
