--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="../bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 <link rel="stylesheet" href="css/styles.css">
 <script src="../bower_components/jquery/dist/jquery.js"></script>
+
+<script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+
 <script type="text/javascript" src="../bower_components/lodash/lodash.js"></script>
 <script type="text/javascript" src="../bower_components/moment/moment.js"></script>
 <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -16,9 +19,12 @@
 <script type="text/javascript" src="../bower_components/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="../bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
-<script src="../bower_components/ngAutocomplete/src/ngAutocomplete.js"></script>
-<script src="../bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
-<script src="../bower_components/ng-file-upload/angular-file-upload.js"></script>
+<script type="text/javascript" src="../bower_components/ngAutocomplete/src/ngAutocomplete.js"></script>
+<script type="text/javascript" src="../bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
+<script type="text/javascript" src="../bower_components/ng-file-upload/angular-file-upload.js"></script>
+
+<script type="text/javascript" src="../bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/services.js"></script>
 <script type="text/javascript" src="js/controllers.js"></script>
