--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
 <link rel="stylesheet" href="../bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 <link rel="stylesheet" href="css/styles.css">
+<!-- For my own implementation of datepicker directive -->
+<link rel="stylesheet" href="../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css">
 <script src="../bower_components/jquery/dist/jquery.js"></script>
 
 <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
@@ -24,11 +26,14 @@
 <script type="text/javascript" src="../bower_components/ng-file-upload/angular-file-upload.js"></script>
 
 <script type="text/javascript" src="../bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+<!-- For my own implementation of datepicker directive -->
+<script type="text/javascript" src="../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
 
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/services.js"></script>
 <script type="text/javascript" src="js/controllers.js"></script>
 <script type="text/javascript" src="js/directives.js"></script>
+<script type="text/javascript" src="js/filters.js"></script>
 
 </head>
 <body>
@@ -39,6 +44,7 @@
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
+				<li ng-show="isLoggedIn()"><a ui-sref="conversations">Conversations</a></li>
 				<li ng-show="isLoggedIn()"><a ui-sref="showMyBookings">Show my bookings</a></li>
 				<li ng-show="isLoggedIn()"><a ui-sref="showMyProperties">Show my props</a></li>
 				<li ng-show="isLoggedIn()"><a ui-sref="updateProperty({propertyId:1})">Update prop 1</a></li>
