--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -28,6 +28,8 @@
 <script type="text/javascript" src="../bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
 <!-- For my own implementation of datepicker directive -->
 <script type="text/javascript" src="../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
+<!-- Angularjs bootstrap directives -->
+<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/services.js"></script>
