Change API urls a bit + authority requirements

--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="RentalApp">
 <head>
 <meta charset="UTF-8">
-<title>Property rental system</title>
+<title ng-bind="pageTitle"></title>
 <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
 <link rel="stylesheet" href="../bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 <link rel="stylesheet" href="css/styles.css">
