Project structure reorganization

--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -33,9 +33,24 @@
 
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/services.js"></script>
-<script type="text/javascript" src="js/controllers.js"></script>
 <script type="text/javascript" src="js/directives.js"></script>
 <script type="text/javascript" src="js/filters.js"></script>
+<script type="text/javascript" src="modules/home/home.js"></script>
+<script type="text/javascript" src="modules/addProperty/addProperty.js"></script>
+<script type="text/javascript" src="modules/security/login.js"></script>
+<script type="text/javascript" src="modules/security/register.js"></script>
+<script type="text/javascript" src="modules/security/logout.js"></script>
+<script type="text/javascript" src="modules/searchProperties/searchProperties.js"></script>
+<script type="text/javascript" src="modules/myBookings/myBookings.js"></script>
+<script type="text/javascript" src="modules/showProperty/showProperty.js"></script>
+<script type="text/javascript" src="modules/conversations/conversations.js"></script>
+<script type="text/javascript" src="modules/conversations/chat.js"></script>
+<script type="text/javascript" src="modules/myProperties/myProperties.js"></script>
+<script type="text/javascript" src="modules/myProperties/myProperty.js"></script>
+<script type="text/javascript" src="modules/myProperties/myPropertyStatistics.js"></script>
+<script type="text/javascript" src="modules/myProperties/myPropertyBookings.js"></script>
+<script type="text/javascript" src="modules/myProperties/updateProperty.js"></script>
+<script type="text/javascript" src="modules/myProperties/myPropertyUnavailableDates.js"></script>
 
 </head>
 <body>
