Now minified version of project is working

--- a/propertyRental/src/main/webapp/app/src/index.html
+++ b/propertyRental/src/main/webapp/app/src/index.html
@@ -31,7 +31,7 @@
 <!-- Angularjs bootstrap directives -->
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="app.min.js"></script>
 <!-- <script type="text/javascript" src="shared/services/accountService.js"></script>
 <script type="text/javascript" src="shared/services/bookingService.js"></script>
 <script type="text/javascript" src="shared/services/conversationService.js"></script>
@@ -58,8 +58,7 @@
 <script type="text/javascript" src="modules/myProperties/myPropertyStatistics.js"></script>
 <script type="text/javascript" src="modules/myProperties/myPropertyBookings.js"></script>
 <script type="text/javascript" src="modules/myProperties/updateProperty.js"></script>
-<script type="text/javascript" src="modules/myProperties/myPropertyUnavailableDates.js"></script> --> 
-
+<script type="text/javascript" src="modules/myProperties/myPropertyUnavailableDates.js"></script> -->
 </head>
 <body>
 <div id="header" ng-include="'shared/partials/header.html'"></div>
